--- a/p8105_fp_ds100_Report.Rmd
+++ b/p8105_fp_ds100_Report.Rmd
@@ -11,9 +11,9 @@ library(tidyverse)
 library(patchwork)
 ```
 
-# Motivation:
+# Motivation
 
-Suicide is a leading cause of death in the US. Suicide rates increased in nearly every state from 1999 through 2016. Mental health conditions are often seen as the cause of suicide, but suicide is rarely caused by any single factor. In fact, many people who died by suicide are not known to have a diagnosed mental health condition at the time of death. We are interested in examining the variations of suicide death rates among different categorical variables such as gender, race, age group, and to test if the observed differences are statistically significant combined with the analysis to suicide death rate and related confidence interval.
+Suicide is a leading cause of death in the US. Suicide rates increased in nearly every state from 1999 through 2016. Mental health conditions are often seen as the cause of suicide, but suicide is rarely caused by any single factor. In fact, many people who died by suicide are not known to have a diagnosed mental health condition at the time of death. We are interested in examining the variations of suicide death rates among different categorical variables such as gender, race, age group, and to test if the observed differences are statistically significant based on the analysis of suicide death rates and related confidence intervals.
 
 
 # Related work:
@@ -22,7 +22,7 @@ Suicide has ranked as the 10th leading cause of death among Americans for many y
 
 # Initial questions:
 
-The initial thought of this project is to discover the relationship between suicide and people's mental status. We have found two separated datasets, in which one is the Injury Mortality data in the US, the other contains people's depression status in the US. Since both of the two datasets contain information for age, race, and gender, we decided to compare the trend of suicide death rates with depression prevalence under these three categories.
+The initial thought of this project is to discover the relationship between suicide and people's mental status. We have found two separated datasets,one of them is the Injury Mortality data in the U.S., the other contains people's depression status in the US. Since both datasets include information for age, race, and gender, we decided to compare the trend of suicide death rates with depression prevalence under these three categories.
 
 # Data:
 
@@ -36,7 +36,7 @@ Glossary: http://apps.nccd.cdc.gov/BRFSSQuest/index.asp
 
 ### Data acquisition and description
 
-As the original dataset is too large, we download the dataset and acquire the data we need. The specific data to be used in this project was accessed in December 2018 using the code below. 
+Since the original dataset is too large, we download the dataset and acquire the data we need. The specific data to be used in this project was accessed in December 2018 using the code below. 
 
 ```{r eval=FALSE, echo=TRUE}
 library(tidyverse)
@@ -54,7 +54,7 @@ brfss_data = brfss_raw %>%
    spread(key = break_out_category, break_out)
 ```
 
-The original dataset contains 1,386,855 rows and 27 column. For further use, we make a preliminary dataset. The preliminary dataset contains 8931 rows and 14 columns. We save the preliminary dataset in our data file. The complete data dictionary is linked above.
+The original dataset contains 1,386,855 rows and 27 columns. For further use, we make a preliminary dataset. The preliminary dataset contains 8931 rows and 14 columns. We saved the preliminary dataset in our data file. The link for complete data dictionary is attached above.
 
 ### Further cleaning
 
@@ -110,7 +110,7 @@ data_BRFSS_JZ = brfss_data %>%
   janitor::clean_names(.) %>% 
   select(., year, locationabbr, locationdesc, response, sample_size, age_group, gender, race_ethnicity)
 ```
-For the Injury Mortality dataset, filter out 'Suicide' as our focus. Get rid of summarized rows for age, sex and race. Since the cases and total population do not differ by 'injury_mechanism', here I use 'All Mechanisms' to prevend over counting for the population. 
+For the Injury Mortality dataset, we filter out 'Suicide' as our focus and get rid of summarized rows for age, sex and race. Since the cases and total population do not differ by 'injury_mechanism', here we use 'All Mechanisms' to prevend over counting for the population. 
 ```{r tidy_data_IM}
 data_IM_JZ = injury_data %>% 
   janitor::clean_names(.) %>% 
@@ -122,7 +122,7 @@ data_IM_JZ = injury_data %>%
     injury_mechanism == 'All Mechanisms')
 ```
 
-## Exploring by 'Age':
+## Exploring by 'Age'
 
 ```{r BRFSS_IM_year_age}
 BRFSS_age_plot = 
@@ -168,10 +168,10 @@ data_IM_JZ %>%
 BRFSS_age_plot + IM_age_plot
 ```
 
-First thing I did is to combine ages to make the two dataset compariable. One defect of this analysis is that the BRFSS data only includes 18-24 age group compared to '< 25' age group in the mortality dataset. If we just look at the other three age groups, for people from 25-64, high prevalence of depression seems to be consistant with suicide death rate. However, regardless of age group '65+' having a relative low depression prevalence, their suicide rate remains relatively high. \
+First thing we did is to combine ages to make the two dataset compariable. One defect of this analysis is that the BRFSS data only includes 18-24 age group compared to '< 25' age group in the mortality dataset. If we just look at the other three age groups, for people from 25-64, high prevalence of depression seems to be consistent with suicide death rate. However, regardless of age group '65+' having a relative low depression prevalence, their suicide rate remains relatively high. \
 When using the 'str_replace' function for '75+', the result kept giving me an extra '+' at the end of the string. So I set '65+' for the '45–64' group so that they can combine to become the '65+' group. \
 For both Prevalence and Death Rate, 5% CI were calculated. Usually large CI stands for a relatively small sample size. \
-Another thing that is worth noticing is that in the raw dataset, the '–' in between '45–64' is not the usual '-' in the keyboard, So I had to copy and paste the symble to my code. 
+Another thing worth noticing is that in the raw dataset, the '–' in between '45–64' is not the usual '-' in the keyboard,thus I had to copy and paste the symbol to my code. 
 
 ## Exploring by 'Race':
 
@@ -218,7 +218,7 @@ BRFSS_race_plot + IM_race_plot
 
 Race categories other than White, Black, and Hispanic were combined into 'Other'. Here we see White category has both high depression prevalence as well as suicide rate.
 
-## Exploring by 'Gender':
+## Exploring by 'Gender'
 
 ```{r BRFSS_IM_year_gender}
 BRFSS_gender_plot = 
@@ -254,7 +254,7 @@ data_IM_JZ %>%
 BRFSS_gender_plot + IM_gender_plot
 ```
 
-Surprisingly, even female appears to have more depression, their suicide rate is much lower than male. Could this give a hint that women are more endurable to depression?
+Although female have higher depression prevalence, their suicide rate is much lower than that of male. Could this give a hint that women are more endurable to depression? We do some researches and find out that women are more likely than men to report suicidal ideation and attempts and to be hospitalized for suicide attempts whereas male tend to choose more lethal method to commit suicide than female (Vijayakumar,2015).
 
 
 ## Regression Model Analysis
@@ -333,15 +333,15 @@ summary(fit_suicide) %>%
 ### Suicide Model Analysis
 Using injury data, we first calculate __suicide death rate = (Deaths \ Population) * 100000__ which represents the number of deaths caused by suicide per 100,000 units population. Then, we transform sex, race, age, year into factor variables for future regression model building. 
 
-Then, we construct regression for suicide death rate as response, sex, race, age(in years), year as predictor. By observing the coefficients estimates and p-values, there is several interesting finds for suicide death rates:      
+Then, we construct regression for suicide death rate as response, sex, race, age(in years), year as predictor. By observing the coefficients estimates and p-values, there is several interesting findings for suicide death rates:      
 
 __Suicide Death Rate = 7.84 - 12.565 I{sex = female} - 0.912 I{race = Non-Hispanic black} + 10.313 I{race = Non-Hispanic white} + 7.745 I{25 < age < 44} + 7.531 I{45 < age < 64} + 6.362 I{age >= 65} + 0.212 I{year = 2012} + 0.215 I{year = 2013} + 0.707 I{year = 2014} + 0.778 I{year = 2015} + 1.05 I{year = 2016}__
   
-1. sex has **significant** p-value < 0.0001: there is significant difference of suicide rate between male and female group and female tends to have lower suicide death rate.   
-2. race of Non-Hispanic white has **significant** p-value: there is significant difference of suicide rate between Non-hispanic Whites and Hispanic and Non-hispanic Black have non-significant difference with Hispanic. Whites tend to have higher suicide death rate compared to Hispanic and Blacks.   
-3. all groups of age(in years) have **significant** p-value: there is significant difference between all age groups with baseline age group(age < 25).    
-4. all years have **non-significant** p-value: there is not significant difference between all years with year 2011.   
-5. the model produced an adjusted $R^2$ = 0.6405, which represents there are 64% of the variability of the suicide rate are explained by the fitted model and data after adjusted and it's a acceptable proportion for the model.
+1. Sex has **significant** p-value < 0.0001: There is significant difference of suicide rate between male and female group and female tends to have lower suicide death rate.   
+2. Race of Non-Hispanic white has **significant** p-value: There is significant difference of suicide rate between Non-hispanic Whites and Hispanic and Non-hispanic Black have non-significant difference with Hispanic. Whites tend to have higher suicide death rate compared to Hispanic and Blacks.   
+3. All groups of age(in years) have **significant** p-value: There is significant difference between all age groups with baseline age group(age < 25).    
+4. All years have **non-significant** p-value: There is not significant difference between all years with year 2011.   
+5. The model produced an adjusted $R^2$ = 0.6405, which represents there are 64% of the variability of the suicide rate are explained by the fitted model and data after adjusted and it's a acceptable proportion for the model.
  
 
 #### Pairwise comparison
@@ -350,8 +350,8 @@ fit_suicide %>% aov(.) %>%  TukeyHSD()
 ```
 
 Then, we make pairwise comparison with Bonferroni and Tukey for race, age and year groups. Findings:      
-1.  __Race__: Non-Hispanic White and Hispanic, Non-Hispanic White and Black have significant different suicide death rate. White have the highest suicide death rate among 3 race groups. And Blacks have smaller suicide death rate compared to Hispanic and Whites.  
-2.  __Age__: 25-44 and <25, 45-64 and <25, 65+ and <25 have significant different suicide death rate. Age groups that are >25 all have higher suicide death rate compared to age <25. And age 65+ have smaller suicide death rate compared to 25-44, 45-64 groups.    
+1.  __Race__: Non-Hispanic White and Hispanic, Non-Hispanic White and Black have significant different suicide death rate. White have the highest suicide death rate among 3 race groups. And Blacks have lower suicide death rate compared to Hispanic and Whites.  
+2.  __Age__: 25-44 and <25, 45-64 and <25, 65+ and <25 have significant different suicide death rate. Age groups that are >25 all have higher suicide death rate compared to age <25. And age 65+ have lower suicide death rate compared to 25-44, 45-64 groups.    
 3. __Year__: All pairwise comparison for years don't generate significant result, meaning there is no significant different suicide death rate in different years.
 
 
@@ -394,7 +394,7 @@ Because of the data structure of brfss data, the age, gender, race are independe
 __Depression Rate = 16.486 + 2.31 I{25 < age < 44} + 4.528 I{45 < age < 64} - 2.125 I{age >= 65}__
   
 1.  There is significant difference in the depression propotion between age group <25 and each other age group including 25-44, 45-64, 65+.   
-2.  All pairwise comparison showed a significant p-value between each age groups while 25-44, 45-64 ages showed an increased depression proportion and 65+ showed a decreased depression proportion.  
+2.  All pairwise comparison showed a significant p-value between each age group while 25-44, 45-64 ages showed an increased depression proportion and 65+ showed a decreased depression proportion.  
 3.  The adjusted $R^2$ = 0.2617 indicates that 
 26.17% of variability of the depression proportion is explained by the model only includes age groups as predictor.
 
@@ -465,13 +465,13 @@ fit_race %>% aov(.) %>% TukeyHSD()
 **Race Model**:   
 __Depression Rate = 17.511 - 1.716 I{race = Black, non-Hispanic} + 1.901 I{race = White, non-Hispanic}__  
     
-1.  There is significant difference in the depression propotion between Hispantic and Non-Hispanic Black, Hispantic and Non-Hispanic White.   
+1.  There is significant difference in the depression propotion among Hispantic and Non-Hispanic Black, Hispantic and Non-Hispanic White.   
 2.  All pairwise comparison showed a significant p-value between each race groups while Whites have higher depression proportion than Hispanics and Blacks and Blacks have lower depression proportion than Hispanics.   
 3.  The adjusted $R^2$ = 0.1081 indicates that 
 10.81% of variability of the depression proportion is explained by the model only includes race groups as predictor.
 
 
-### Additional Analysis for Location:
+### Additional Analysis for Location
 
 ```{r}
 brfss<-read.csv("./data/brfss_data.csv")
@@ -498,12 +498,21 @@ location_depression %>%
 
 In addition to investigating the trend of depression prevalence under the category of *"Age"*, *"Race"*, and *"Gender"*, we are also interested in examining if there is a difference in depression proportion across states of the U.S. Based on the graph, a remarkable finding is that Virgin Islands has the lowest proportion of depression compared to other locations and the difference is quite significant. According to our research, the state population consists of over 70% Black race, and linking back to our visualizations and regression model results, they are consistent with each other since Blacks tend to have the lowest depression prevalence relative the others race groups included in our analysis.
 
-# Discussion:
+# Discussion
 
-From 2011 through 2016, the general trend for depression prevalence in US increases from 2011 to 2013, then decreases there after. While on the other hand, suicide death rate appears to be increasing each year. Even if we know that depression is just one causal factor for suicide, we expected to see similar trend for the three groups (age, race, gender). The result are generally as expected with some noticable ones. 
+From 2011 through 2016, the general trend for depression prevalence in US increases from 2011 to 2013, then decreases there after. While on the other hand, suicide death rate appears to be increasing each year. Even if we know that depression is just one causal factor for suicide, we expected to see similar trend for the three groups (age, race, gender).
  
-People older than 65 have a relatively low prevalence of depression while still keep a high suicide rate. In contrary to Black people who have both low depression prevalence and suicide rate, White people are high in both of the statistics. Women are reported to have higher prevalence of depression compared to men, while keep a relatively low death rate of suicide rate. Any apparent difference of trend on the two plot might suggest other causal factors in the 'causal pies'. 
+People older than 65 have relatively low prevalence of depression but high suicide rate. On the contray,Black people have both low depression prevalence and low suicide rate. White people have high depression prevalence and high suicide rate . Women are reported to have higher prevalence of depression compared to men, while keep a relatively low death rate of suicide rate. Any apparent difference of trend on the two plot might suggest other causal factors in the 'causal pies'. 
 
-Our results obtained from the regression models agree mostly with the patterns found in the visualization plots stratified by *"Age"*, *"Race"*, and *"Gender"* by looking at the estimated coefficients for each model parameter and comparing their magnitude and signs with the reference factor level. However, by looking at the fitted regression for suicide death rate, it can be observed that the term 'year' is not a significant predictor and thus should be removed from the model. This means that although suicide death rates appears to be gradually increasing from 2011 to 2016, there is not enough statistical evidence to show that the change is significant. Overall, we recommend the final model to be **Suicide Death Rate ~ Age + Race + Gender**
+Our results obtained from the regression models agree mostly with the patterns found in the visualization plots stratified by *"Age"*, *"Race"*, and *"Gender"* by looking at the estimated coefficients for each model parameter and comparing their magnitude and signs with the reference factor level. However, by looking at the fitted regression for suicide death rate, we can see that the term 'year' is not a significant predictor and thus should be removed from the model. This means that although suicide death rates appears to be gradually increasing from 2011 to 2016, there is not enough statistical evidence to show that the change is significant. Overall, we recommend the final model to be **Suicide Death Rate ~ Age + Race + Gender**
 
 On the other hand, for the simple linear regressions to predict depression prevalence, *"Age"*, *"Race"*, and *"Gender"* are all significant covariates. This supports our conclusion that suicide death rate and depression prevalence do vary among these proposed factors. However, the direct association between depression and suicide may be difficult to test. For rare cases like suicide, case-control study should be a suitable way to conduct the research, while the psychological status like depression are really complicated to detect, especially for suicide cases.
+
+#Reference
+[1] Holmes, L. (2018). Has the Rate of Suicide in the U.S. Risen? Retrieved from https://www.verywellmind.com/suicide-rates-overstated-in-people-with-depression-2330503 
+[2] Vijayakumar L. (2015). Suicide in women. Indian journal of psychiatry, 57(Suppl 2), S233-8. 
+[3] Centers for disease control and prevention. (2018). Behavioral Risk Factor Surveillance System (BRFSS) Prevalence Data (2011 to present) | Chronic Disease and Health Promotion Data & Indicators. Retrieved from https://chronicdata.cdc.gov/Behavioral-Risk-Factors/Behavioral-Risk-Factor-Surveillance-System-BRFSS-P/dttw-5yxu 
+[4] National Center for Health Statistics. (2018). NCHS - Injury Mortality: United States | Data. Retrieved from https://data.cdc.gov/NCHS/NCHS-Injury-Mortality-United-States/nt65-c7a7
+
+
+
