--- a/p8105_fp_ds100_Report.Rmd
+++ b/p8105_fp_ds100_Report.Rmd
@@ -17,8 +17,9 @@ Suicide is a leading cause of death in the US. Suicide rates increased in nearly
 
 
 # Related work:
-
-Suicide has ranked as the 10th leading cause of death among Americans for many years. https://www.verywellmind.com/suicide-rates-overstated-in-people-with-depression-2330503
+Suicide has ranked as the 10th leading cause of death among Americans for many years. 
+Here is the link for report that inspired us. https://afsp.org/about-suicide/suicide-statistics/ 
+This report summarizes the suicide rates by race and age. In addition, they also include the most common suicide methods and data for suicide attempts.
 
 # Initial questions:
 
@@ -521,7 +522,7 @@ __Suicide Death Rate = 8.334 - 12.565 I{sex = female} - 0.912 I{race = Non-Hispa
 On the other hand, for the simple linear regressions to predict depression prevalence, *"Age"*, *"Race"*, and *"Gender"* are all significant covariates. This supports our initial hypothesis that suicide death rate and depression prevalence do vary among these proposed factors. However, the direct association between depression and suicide may be difficult to test. For rare cases like suicide, case-control study should be a suitable way to conduct the research by carefully selecting the cases and controls and examining their odds ratio of being exposed to depression. The challenge is that psychological status such as depression is hardly detected accurately, and people may not be willing to report authentic information which potentially leads to bias when analyzing the results. Generally speaking, our project was successful in exploring the relationship between suicide death rate and depresion prevalence among *"Age"*, *"Race"*, and *"Gender"*.
 
 #Reference
-[1] Holmes, L. (2018). Has the Rate of Suicide in the U.S. Risen? Retrieved from https://www.verywellmind.com/suicide-rates-overstated-in-people-with-depression-2330503 
+[1] American Foundation for Suicide Prevention (2018). Suicide Statistics Retrieved from https://afsp.org/about-suicide/suicide-statistics/
 
 [2] Vijayakumar L. (2015). Suicide in women. Indian journal of psychiatry, 57(Suppl 2), S233-8.
 
